examples/c/error-codes/undefined/UB-FD7-bad-static.output
UB-FD7-bad-static.c:4:5: error: second parameter of 'main' (argument array) must be of type 'char **'
int main(int x, float* y){
    ^
1 error generated.
